Fix overflow error with main container

--- a/app/assets/stylesheets/components/_music_page.scss
+++ b/app/assets/stylesheets/components/_music_page.scss
@@ -68,6 +68,7 @@ body {
     height: 100%;
     background-color: #3c3f5b;
     padding-left: 200px;
+    padding-bottom: 200px;
     // background-color: #705a27;
     // background-color: #2e263b;
     // background-color: #613136;
